# AgenticAi

langchainupdated/: pyproject.toml  requirements.txt
langchainupdated/mcplangchain/: client.py  mathserver.py  weather.py
langchainupdated/updatelangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structureoutput.ipynb  6-middleware.ipynb
