[project]
name = "langchainupdated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
